[gd_scene load_steps=5 format=3 uid="uid://dqnds8fo1de03"]

[ext_resource type="FontFile" uid="uid://d3xexcg8b2p13" path="res://assets/fonts/press-start-2p.regular.ttf" id="1_t4ar0"]
[ext_resource type="Script" path="res://scripts/pause_menu.gd" id="1_xgh4w"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dbv06"]
bg_color = Color(0.729412, 0.647059, 0.0784314, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 2
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
expand_margin_top = 5.0
expand_margin_bottom = 5.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qxroo"]
content_margin_left = 10.0
content_margin_right = 10.0
bg_color = Color(0.729412, 0.647059, 0.0784314, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 2
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
expand_margin_top = 5.0
expand_margin_bottom = 5.0

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xgh4w")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -640.0
offset_top = -360.0
offset_right = 640.0
offset_bottom = 360.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.392157)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -76.0
offset_top = -26.0
offset_right = 76.0
offset_bottom = 26.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="ResumeButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_t4ar0")
theme_override_styles/normal = SubResource("StyleBoxFlat_dbv06")
text = "Resume"

[node name="MainMenuButton" type="Button" parent="VBoxContainer"]
texture_filter = 1
layout_mode = 2
theme_override_fonts/font = ExtResource("1_t4ar0")
theme_override_styles/normal = SubResource("StyleBoxFlat_qxroo")
text = "Main Menu"

[connection signal="pressed" from="VBoxContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="VBoxContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
